@@ -1,3 +1,7 @@
+2010-04-06  Kirit Saelensminde  <kirit@felspar.com>
+ Parsers
+ - Removed the parser instances because they're not thread safe.
+
 2010-04-01  Kirit Saelensminde  <kirit@felspar.com>
  Exception handling
  - Allow us to throw not implemented exceptions based on Boost system errors.
